[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/trap_large_spikes.png" type="Texture" id=1]
[ext_resource path="res://objects/traps/TrapLargeSpikes.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "blink"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AreaSpikes/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.25, 0.3, 0.4, 0.5, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("AreaSpikes:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 17 ), Vector2( 0, -30 ), Vector2( 0, -20 ), Vector2( 0, 17 ) ]
}

[node name="TrapLargeSpikes" type="Node2D"]
z_index = -5
script = ExtResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -1.19209e-06, 12 )
scale = Vector2( 4.4, 5.2 )

[node name="AreaSpikes" type="Area2D" parent="."]
position = Vector2( 0, 17 )
collision_layer = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AreaSpikes"]
polygon = PoolVector2Array( -4.47205, -29.972, -6.85315, -17.2728, -6.85315, -17.2728, -6.77069, 34.0083, -1.07607, 33.7434, -1.09798, -17.2337, -2.35057, -30.0269 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="AreaSpikes"]
position = Vector2( 8, 0 )
polygon = PoolVector2Array( -4.47205, -29.972, -6.85315, -17.2728, -6.85315, -17.2728, -6.77069, 34.0083, -1.07607, 33.7434, -1.09798, -17.2337, -2.35057, -30.0269 )

[node name="Sprite" type="Sprite" parent="AreaSpikes"]
texture = ExtResource( 1 )
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blink = SubResource( 1 )
anims/move = SubResource( 2 )

[node name="TimerStartMove" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="body_entered" from="AreaSpikes" to="." method="_on_AreaSpikes_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
[connection signal="timeout" from="TimerStartMove" to="." method="_on_TimerStartMove_timeout"]
